# rv16-lib

./: README.md  pyproject.toml  requirements.txt
rv16_lib/: __init__.py  configuration_manager.py  configuration_manager.yaml  exceptions.py  logger.py  utils.py
rv16_lib/architecture/: __init__.py  base_provider.py  base_service.py  base_service_connector.py  base_service_request.py
rv16_lib/configuration_manager/: __init__.py  config.yaml  entities.py  exceptions.py
rv16_lib/entities/: __init__.py
rv16_lib/srv_ocr/: entities.py
rv16_lib/storage/: __init__.py  database_connector.py  mongo_connector.py  redis_connector.py
tests/: test_utils.py
tests/architecture/: test_base_service.py  test_base_service_connector.py
tests/configuration_manager/: test_init.py
