[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rv16-lib"
version = "1.1.0"
description = "A shared Python utility library for the raVioleria16 project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML",
    "pydantic"
]

[project.optional-dependencies]
core = [
    "PyYAML==6.0.2",
    "pydantic==2.11.9",
    "httpx==0.28.1",
    "starlette==0.48.0"
]
redis = [
    "redis==6.4.0"
]
mongo = [
    "pymongo==4.15.1",
]

srv = [
    "fastapi==0.117.1",
    "uvicorn==0.37.0"
]